@@ -48,10 +48,9 @@ STATIC FUNCTION demo_ShowCode( cFileName )
    // Convert it forever to Windows (also on LINUX)
    // is mandatory for memo fields !
    // IF ! hb_Eol() $ cText
-   IF AT(CHR(13) + CHR(10),cText) < 1
-//      cText := StrTran( cText, Chr(10), hb_Eol() )
-        cText := StrTran( cText, Chr(10), CHR(13) + CHR(10) )
-   ENDIF
+   
+   cText := hwg_UNIX2DOS(cText)
+    
 #ifdef __PLATFORM__WINDOW   
    #define _SHOW_HELP_MODAL .T.
 #else
